# gsynth

./: CMakeLists.txt  README.md  cmd_selections.cpp  cmd_selections.h  ghelp.cpp  ghelp.h  git_cmd_descriptions.cpp  git_cmd_descriptions.h  git_commands.cpp  git_commands.h  gsynth  gsynth_generic_selections.cpp  gsynth_generic_selections.h  main.cpp
